--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,13 +15,13 @@ start_num_sub = "python src/sub_num.py"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-fastapi = "^0.103.1"
+fastapi = "^0.104.1"
 uvicorn = "^0.23.2"
-rq = "^1.15.1"
-pydantic = "^2.3.0"
+bullmq = "^1.15.2"
+pydantic = "^2.4.2"
 
 [tool.poetry.group.dev.dependencies]
-poethepoet = "^0.22.1"
+poethepoet = "^0.24.1"
 
 [tool.poe]
 envfile = ".env"
