feat: add suport to bullmq and remove talismanrc file

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@ REDIS_PORT=6379
 REDIS_DB_NUMBER=0
 REDIS_PASSWORD=
 
-# Queues
+# Redis queues
 REDIS_QUEUE_MSG="msg_process_queue"
 REDIS_QUEUE_NUM="num_process_queue"
+
+# Bullmq queues
+BULLMQ_QUEUE_PUB=
+BULLMQ_QUEUE_SUB=
